@@ -39,7 +39,36 @@ public class ListState implements State {
             this.shoppingList.printProducts();
         }
 
-        return displayOptions(List.of("Add item", "Add quantity", "Buy quantity", "Go back", "Exit"),
-                new ArrayList<>(Arrays.asList(new AddProductState(this.shoppingList), new EditProductState(this.shoppingList, "add"), new EditProductState(this.shoppingList, "buy"), new HubState(), null)));
+        return displayOptions(List.of("Add item", "Delete item", "Add quantity", "Buy quantity", "Go back", "Exit"),
+                new ArrayList<>(Arrays.asList(new AddProductState(this.shoppingList), new DeleteProductState(this.shoppingList), new EditProductState(this.shoppingList, "add"), new EditProductState(this.shoppingList, "buy"), new HubState(), null)));
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
